--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@ _site/
 .jekyll-metadata
 .asset-cache
 Gemfile.lock
+.jekyll-cache
 # ===== End Jekyll.gitignore =====
 
 # ===== Start FireBase .gitignore =====
