--- a/_data/officials.yml
+++ b/_data/officials.yml
@@ -74,7 +74,7 @@ coroner:
   - name: Cathy Mabbutt
     description: >
       <p>
-        Grant me the serenity to accept the things I cannot change, Courage to change the things I can, And wisdom to know the difference.  ~ Reinhold Niebuhr
+        Cathy Mabbutt’s professional background is in law as well as nursing. She graduated from the Sacred Heart School of Nursing in 1971 and completed her law degree in 2001 at the University of Idaho. She was elected as coroner for the first time in 2006.
       </p>
     page: /coroner/
     bio: /coroner/bio/
@@ -102,7 +102,7 @@ sheriff:
   - name: Richard Skiles
     description: >
       <p>
-        Grant me the serenity to accept the things I cannot change, Courage to change the things I can, And wisdom to know the difference.  ~ Reinhold Niebuhr
+        Richie Skiles has served as chief of police in Troy from 2013 - 2016. His law enforcement experience also includes 12 years with the Latah County Sheriff’s Office and five years as a reserve officer for the St. Maries Police Department. He also spent four years in the Marines and managed the Moscow Zips Drive-Thru for five years.  He has served as Sheriff of Latah County since 2016.
       </p>
     page: /sheriff/
     bio: /sheriff/bio/
@@ -122,7 +122,7 @@ treasurer:
       </p>
       <p>
       Lois has 1 daughter, Leona, a graduate of the University of Idaho, Go Vandals!
-      </p>      
+      </p>
     page: /treasurer/
     bio: /treasurer/bio/
     image: /img/officials/LoisReed.png
