Fixed  issues #43 and #44.

--- a/_data/officials.yml
+++ b/_data/officials.yml
@@ -5,10 +5,10 @@ commissioners:
         Richard Walser was born in Moscow and grew up on a farm between Potlatch and Viola.  He attended grade school and high school in Potlatch and graduated from the University of Idaho with a degree in Architecture.  Rather than pursue a career in architecture however, Richard returned to the farm where he farmed and raised cattle for over 30 years.  During that time he served on the boards of several farm organizations.
       </p>
       <p>
-        After retiring from farming, Richard then begin working part time at Tri-State in the hardware department.  He is pleased to report that while his wealth made no dramatic change at that job, he now owns every hand tool known to man.
+        After retiring from farming, Richard then began working part time at Tri-State in the hardware department.  He is pleased to report that while his wealth made no dramatic change at that job, he now owns every hand tool known to man.
       </p>
       <p>
-        He and his wife, Vicki, still reside in their farm home.  However, the only livestock they still care for is their dog, "Buster".  Richard is currently serving in his 2ns term as one of the Latah County Commissioners, a job he is happy and humbled to do !
+        He and his wife, Vicki, still reside in their farm home.  However, the only livestock they still care for is their dog, "Buster".  Richard is currently serving in his 2nd term as one of the Latah County Commissioners, a job he is happy and humbled to do !
       </p>
     district: District 1
     page: /commissioners/district_1/
@@ -36,7 +36,7 @@ commissioners:
     district: District 3
     description: >
       <p>
-        After graduating Moscow high school in 1979, Dave McGraw worked in the auto, truck, and farm implement parts business for 15 years where he developed a passion for small business. Following his passion for business, he began purchasing cable TV systems in 1995, at the height of the business he owned and operated cable TV and Internet systems in 4 states: Idaho, Washington, Texas and New Mexico. Following his retirement from the Cable industry he became involved with local Government serving first on the Troy City Council for 3 years and then as a Latah County Commissioner where he is currently serving his 3rd term. Dave and his wife Leslie of 25 years have 5 kids and 7 grandkids.
+        After graduating Moscow High School in 1979, Dave McGraw worked in the auto, truck, and farm implement parts business for 15 years where he developed a passion for small business. Following his passion for business, he began purchasing cable TV systems in 1995, at the height of the business he owned and operated cable TV and Internet systems in 4 states: Idaho, Washington, Texas and New Mexico. Following his retirement from the Cable industry he became involved with local Government serving first on the Troy City Council for 3 years and then as a Latah County Commissioner where he is currently serving his 3rd term. Dave and his wife Leslie of 25 years have 5 kids and 7 grandkids.
       </p>
     page: /commissioners/district_3/
     bio: /commissioners/bio/dave_mcgraw/
@@ -74,7 +74,7 @@ coroner:
   - name: Cathy Mabbutt
     description: >
       <p>
-        Grant me the serenity to accept the things I cannot change, Courage to change the things I can, And wisdom to know the difference.  ~ Reinhold Niebuhr
+        Cathy Mabbutt’s professional background is in law as well as nursing. She graduated from the Sacred Heart School of Nursing in 1971 and completed her law degree in 2001 at the University of Idaho. She was elected as coroner for the first time in 2006.
       </p>
     page: /coroner/
     bio: /coroner/bio/
@@ -102,7 +102,7 @@ sheriff:
   - name: Richard Skiles
     description: >
       <p>
-        Grant me the serenity to accept the things I cannot change, Courage to change the things I can, And wisdom to know the difference.  ~ Reinhold Niebuhr
+        Richie Skiles has served as chief of police in Troy from 2013 - 2016. His law enforcement experience also includes 12 years with the Latah County Sheriff’s Office and five years as a reserve officer for the St. Maries Police Department. He also spent four years in the Marines and managed the Moscow Zips Drive-Thru for five years.  He has served as Sheriff of Latah County since 2016.
       </p>
     page: /sheriff/
     bio: /sheriff/bio/
