Changed from extensions to extension.

--- a/_data/menu.yaml
+++ b/_data/menu.yaml
@@ -29,8 +29,8 @@ Departments:
     url: /driver_licensing/
   - title: Elections
     url: /auditor/elections/
-  - title: Extensions
-    url: /extensions/
+  - title: Extension
+    url: /extension/
   - title: Fair Grounds
     url: https://latahfair.com/
   - title: Historical Society
