--- a/_data/menu.yaml
+++ b/_data/menu.yaml
@@ -32,7 +32,7 @@ Departments:
   - title: Extension
     url: /extension/
   - title: Fair Grounds
-    url: https://latahfair.com/
+    url: https://latahcountyfair.com/
   - title: Historical Society
     url: /historical_society/
   - title: ITS
