Updated Auditor Name and link. Updated page.

--- a/_data/menu.yaml
+++ b/_data/menu.yaml
@@ -9,7 +9,7 @@ Officials:
 Departments:
   - title: Assessor
     url: /assessor/
-  - title: Auditor
+  - title: Auditor/Clerk/Recorder
     url: /auditor/
   - title: Building & Grounds
     url: /building_grounds/
