Fixes #79, removed older img folder

--- a/_data/menu.yaml
+++ b/_data/menu.yaml
@@ -115,17 +115,17 @@ Elections:
 
 Mapping:
   - title: GIS
-    url: /gis/
+    url: /underConstruction/ #/gis/
   - title: Online Maps
-    url: /gis/maps/
+    url: /underConstruction/ #/gis/maps/
   - title: Map & GIS Pricing
-    url: /gis/maps/pricing/
+    url: /underConstruction/ #/gis/maps/pricing/
   - title: GIS Ordinance
-    url: /gis/ordinance/
+    url: /underConstruction/ #/gis/ordinance/
   - title: Fee Waiver Request
-    url: /gis/waiver/
+    url: /underConstruction/ #/gis/waiver/
   - title: Data License Agreement
-    url: /gis/agreement/
+    url: /underConstruction/ #/gis/agreement/
 
 Contact:
   - title: Contact Us
