--- a/_data/officials.yml
+++ b/_data/officials.yml
@@ -46,7 +46,7 @@ assessor:
   - name: Pat Vaughan
     description: >
       <p>
-        Patrick J. Vaughan was born and raised in Boise, Idaho. He graduated in 1977 from the United States Military Academy, West Point, and served over 20 years in the U.S. Army.
+        Patrick J. Vaughan was born and raised in Boise, Idaho. He graduated in 1977 from the United States Military Academy, West Point, and served over 20 years in the U.S. Army. Since returning to Idaho in 1998 he has been active in school and civic activities in the Moscow area. Pat was appointed by the Board of Commissioners as Latah County Assessor in 2005, and was elected Assessor in 2006, 2010, and in 2014. Pat has two adult children, Katie, a graduate of Willamette University, and Henry, a student at the College of Idaho.
       </p>
     page: /assessor/
     bio: /assessor/bio/
