Fixed and closed issue #113.

--- a/_data/menu.yaml
+++ b/_data/menu.yaml
@@ -45,7 +45,7 @@ Departments:
     url: /planning_building/
   - title: Probation
     url: /probation/
-  - title: Prosecutor
+  - title: Prosecuting Attorney
     url: /prosecutor/
   - title: Sheriff
     url: /sheriff/
