--- a/_data/officials.yml
+++ b/_data/officials.yml
@@ -18,7 +18,7 @@ commissioners:
     district: District 2
     description: >
       <p>
-        TTom Lamar was elected to the Latah County Commission, District 2 in November 2014, and began his first term in January 2015. He was re-elected in November 2016. Lamar previously served on the Moscow City Council from June 2007 to January 2015..
+        Tom Lamar was elected to the Latah County Commission, District 2 in November 2014, and began his first term in January 2015. He was re-elected in November 2016. Lamar previously served on the Moscow City Council from June 2007 to January 2015..
       </p>
       <p>
         Since 1990, Lamar has been the executive director of Palouse-Clearwater Environmental Institute, a broad-based conservation organization and Nature Center based in Moscow. In that role he has worked with many Latah County landowners on stream restoration projects on their properties. He was a founding board member of the Latah Trail Foundation, and taught Conservation Leadership for six years at the University of Idaho.
